# Games101

./: .gitignore
Assignment1/: Opencv_Debugt.props  Opencv_Release.props  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/: main.cpp
Assignment5/: Renderer.cpp  Triangle.hpp  binary.ppm
Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
Assignment7/: BVH.cpp  Bounds3.hpp  Scene.cpp  Triangle.hpp
GraphicsGames101/: main.cpp
LearnOpenGL/: 10_Light.cpp  15_LightMap_texture.cpp  1_HelloTriangle.cpp  21_LoadModel.cpp  2_Shader.cpp  3_texture.cpp  48_TextRendering.cpp  9_MVP.cpp  AllGL.props  CMakeLists.txt  Marry.cpp  Material.cpp  Material.h  Shader.cpp  Shader.h  main.cpp
LearnOpenGL/Shaders/: Fund.vert  Shader.cpp  Shader.def  Shader.h  fragment.frag  fund.frag  light.frag  lightingCube.frag  lightingMap.vert  marry.frag  multipleLighting.frag  vertex.vert
LearnOpenGL/utility/: Camera.cpp  Camera.h  CoreType.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Model.cpp  Model.h  Render.cpp  Render.h  SceneObject.cpp  SceneObject.h  TextRender.cpp  TextRender.h  Utility.cpp
RayTracingInOneWeek/: RayTracingInOneWeek.cpp  color.h  ray.h  vec3.h
RayTracing_TriangleIntersection/: Renderer.cpp  Triangle.hpp
